package net.notdot.protorpc;

message Request {
  required int64 rpc_id = 1;
  required string service = 2;
  required string method = 3;
  required bytes body = 4;
}

message Response {
  enum ResponseType {
    OK = 0;
    RPC_FAILED = 1;
    CALL_NOT_FOUND = 2;
    ARGUMENT_ERROR = 3;
    DEADLINE_EXCEEDED = 4;
    CANCELLED = 5;
    APPLICATION_ERROR = 6;
    OTHER_ERROR = 7;
    OVER_QUOTA = 8;
    REQUEST_TOO_LARGE = 9;
    CAPABILITY_DISABLED = 10;
  }
  
  required int64 rpc_id = 1;
  required ResponseType status = 2 [default=OK];
  optional bytes body = 3;
  optional string error_detail = 4;
  optional int32 application_error = 5;
}
